--- a/css/style.css
+++ b/css/style.css
@@ -8372,10 +8372,10 @@ h1, h2, h3, h4, h5,
     position: absolute;
     top: 50%;
     left: -12px;
-    width: 200px;
+    width: 170px !important;
     height: 40px;
     content: '';
-    background: #3e64ff;
+    background: transparent;
     z-index: -1;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -8385,7 +8385,7 @@ h1, h2, h3, h4, h5,
     -ms-border-radius: 30px;
     border-radius: 30px }
   .navbar-brand span {
-    color: #fff; }
+    color: #3e64ff; }
 
 .hero-wrap {
   width: 100%;
